[gd_scene load_steps=3 format=3 uid="uid://c6b0qegdltxvw"]

[ext_resource type="Script" uid="uid://ckmn1a1rkmohv" path="res://ui/seasonal/AutumnLedgerUi.gd" id="1_xs5d6"]
[ext_resource type="Texture2D" uid="uid://dy8bikbul4bne" path="res://ui/assets/scroll_bg.png" id="2_iyrqy"]

[node name="AutumnLedgerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xs5d6")

[node name="ParchmentBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iyrqy")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "THE HARVEST ACCOUNTING"
horizontal_alignment = 1

[node name="SettlementName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settlement: [SETTLEMENT_NAME]"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="FoodRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/FoodRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/FoodRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Food Stores"

[node name="FoodStock" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/FoodRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0 / 0"
horizontal_alignment = 1

[node name="FoodStatus" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/FoodRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "[ STATUS ]"
horizontal_alignment = 2

[node name="WoodRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/WoodRow"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/WoodRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Wood/Fuel"

[node name="WoodStock" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/WoodRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0 / 0"
horizontal_alignment = 1

[node name="WoodStatus" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/ListContainer/WoodRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "[ STATUS ]"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="WinterOutlookLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "WINTER OUTLOOK: SECURE"
horizontal_alignment = 1

[node name="SignButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Sign and Seal Ledger"
